--- a/assets/css/Responsive/MediumScreen.css
+++ b/assets/css/Responsive/MediumScreen.css
@@ -166,4 +166,201 @@
         width: 100%;
         padding-bottom: 40px;
     } 
+
+    .col-lg-7{
+        order: 2;
+    }
+    .col-lg-5{
+        order: 1;
+    }
+    .timeline-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 80px;
+        align-items: center;
+        width: 100%;
+        max-width: 1000px;
+        margin: 0 auto;  
+    }
+
+    .timeline-container {
+        width: 80%;
+        position: relative;
+        margin-bottom: 40px;
+    }
+
+    .progress-path {
+        width: 100%;
+        height: 4px;
+        background: rgb(215, 211, 211);
+        border-radius: 3px;
+        position: relative;
+        margin-bottom: 60px;
+    }
+
+    .progress-glow {
+        height: 6px;
+        width: 0%;
+        background: linear-gradient(90deg, gold, gold);
+        border-radius: 3px;
+        transition: width 0.5s ease;
+    }
+
+    .milestone {
+        position: absolute;
+        top: -25px;   
+        width: 50px;
+        height: 50px;
+        line-height: 40px;
+        border-radius: 50%;
+        background-color: gold;
+        /* border: 3px solid #502C9D; */
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        cursor: pointer;
+        transition: transform 0.3s ease, background 0.3s ease;
+        text-align: center;
+    }
+
+    .milestone:hover {
+        transform: scale(1.2);
+        background-color: blueviolet;
+        color: #fff;
+    }
+
+    .info-box {
+        background-color: #fff;
+        color: blueviolet;
+        /* border: 3px solid gold; */
+        padding: 20px;
+        border-radius: 20px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        text-align: center;
+        width: 100%;
+        height: 200px;  
+        box-sizing: border-box;
+        margin-top: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: baseline;
+        align-items: center;
+        overflow: hidden; 
+
+    }
+
+    .info-box h3 {
+        margin: 0 0 5px;
+        font-size: 50px;
+        font-weight: 600;
+        color: #292930;
+    }
+
+    .info-box p {
+        margin: 0;
+        font-size: 1.5rem;
+        color: #757575;
+    }
+
+    .swiper-container { 
+        width: 80%;
+        height: 750px; 
+        margin: auto; 
+        padding: 20px 0;
+        overflow:hidden; 
+    }
+
+    .swiper-wrapper { 
+        display: flex; 
+    }
+
+    .swiper-slide { 
+        flex-shrink: 0; 
+        width: auto; 
+        display: flex; 
+        justify-content: center; 
+    }
+
+    .ab-carousel-item { 
+        top: 15%;
+        width: 1000000px; 
+        height: 500px;
+        background: #fff; 
+        padding: 20px; 
+        border-radius: 10px; 
+        box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        text-align: center; 
+        display: flex; 
+        flex-direction: column; 
+        align-items: center;
+        position: relative;
+    }
+
+    .front-content-top { 
+        padding: 10px; 
+        position: relative; 
+    }
+
+    .review-card-img { 
+        width: 200px !important; 
+        height: 200px; 
+        border-radius: 50%; 
+        object-fit: cover; 
+        border: 5px solid gold; 
+        position: absolute; 
+        top: -100px; 
+        left: 50%; 
+        transform: translateX(-50%);
+        box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        background-color: white;
+    }
+
+    .front-content-bottom { 
+        padding: 40px 10px 10px; 
+    }
+
+
+    .swiper-button-next,
+    .swiper-button-prev {
+        color: gold; 
+        font-size: 28px; 
+        font-weight: bold;
+        transition: transform 0.2s ease, color 0.3s ease;
+        position: absolute;
+        top: 75%;
+        transform: translateY(-50%);
+    }
+
+    .swiper-button-next {
+        right: 100px; 
+    }
+
+    .swiper-button-prev {
+        left: 100px; 
+    }
+
+    .swiper-button-next:hover,
+    .swiper-button-prev:hover {
+        color: #000; 
+        transform: translateY(-50%) scale(1.15); 
+    }
+
+    .swiper-button-next:active,
+    .swiper-button-prev:active {
+        transform: translateY(-50%) scale(1.1);
+    }
+
+
+    .swiper-pagination-bullet-active { 
+        border: 5px solid gold;
+        background: gold; 
+    }
+
+    .swiper-pagination {
+        bottom: -50px !important; 
+    }
+
+    
 }
