--- a/assets/css/Responsive/smallMedScreen.css
+++ b/assets/css/Responsive/smallMedScreen.css
@@ -219,6 +219,7 @@
     background: rgb(215, 211, 211);
     border-radius: 3px;
     position: relative;
+    margin-top: -4px;
     margin-bottom: 60px;
 }
 
@@ -233,8 +234,8 @@
 .milestone {
     position: absolute;
     top: -20px;   
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     line-height: 40px;
     border-radius: 50%;
     background-color: gold;
@@ -247,6 +248,7 @@
     cursor: pointer;
     transition: transform 0.3s ease, background 0.3s ease;
     text-align: center;
+    font-size: 19px;
 }
 
 .milestone:hover {
