--- a/assets/css/Responsive/smallScreen.css
+++ b/assets/css/Responsive/smallScreen.css
@@ -171,15 +171,7 @@
     .btn {
         width: 100%; 
     }
-    .typeform{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 50px;
-        
-         
-     }
+
      footer{
         text-align: left;
         font-size: 20px;
@@ -189,64 +181,50 @@
     
      /* Faculty info */
 
-     .inst-caro-item h1 {
+     /* .inst-caro-item h1 {
         font-size: 20px;
     }
     .inst-caro-item h2 {
         font-size: 14px;
-    }
+    } */
 
-    .timeline-wrapper {
+    /* .timeline-wrapper {
         display: flex;
         flex-direction: column;
         gap: 80px;
         align-items: center;
         width: 100%;
-        max-width: 1000px;
+        max-width: 10px;
         margin: 0 auto;  
-    }
-
+    } */
+/* 
     .timeline-container {
         width: 80%;
         position: relative;
         margin-bottom: 40px;
-    }
+    } */
 
-    .progress-path {
+    /* .progress-path {
         width: 100%;
         height: 2px;
         background: rgb(215, 211, 211);
         border-radius: 3px;
         position: relative;
         margin-bottom: 60px;
-    }
-
+    } */
+/* 
     .progress-glow {
         height: 6px;
         width: 0%;
         background: linear-gradient(90deg, gold, gold);
         border-radius: 3px;
         transition: width 0.5s ease;
-    }
+    } */
 
     .milestone {
-        position: absolute;
-        top: -12.5px;   
-        width: 27.5px;
-        height: 27.5px;
-        line-height: 40px;
-        border-radius: 50%;
-        background-color: gold;
-        /* border: 3px solid #502C9D; */
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: bold;
-        cursor: pointer;
-        transition: transform 0.3s ease, background 0.3s ease;
-        text-align: center;
-        font-size: 15px;    
+       
+       
+        font-size: 16px;    
     }
 
     .milestone:hover {
@@ -255,10 +233,9 @@
         color: #fff;
     }
 
-    .info-box {
+    /* .info-box {
         background-color: #fff;
         color: blueviolet;
-        /* border: 3px solid gold; */
         padding: 20px;
         border-radius: 20px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -273,7 +250,7 @@
         align-items: center;
         overflow: hidden; 
 
-    }
+    } */
 
     .info-box h3 {
         margin: 0 0 5px;
@@ -284,7 +261,7 @@
 
     .info-box p {
         margin: 0;
-        font-size: 1.5rem !important;
+        font-size: 1.1rem !important;
         color: #757575;
     }
 }
