--- a/assets/css/Functionality/Form.css
+++ b/assets/css/Functionality/Form.css
@@ -14,14 +14,14 @@
     max-width: 400px;
     margin: auto;
   } */
-  .form-box {
+  /* .form-box {
     background: white;
     padding: 32px;
     border-radius: 8px;
-    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+
     border: 1px solid #E5E7EB; 
     padding-bottom: 100px;
-  }
+  } */
   /* h2 {
     font-size: 24px;
     font-weight: bold;
@@ -33,9 +33,9 @@
     color: #6B7280;
     margin: 8px 0 24px;
   } */
-  .form-group {
+  /* .form-group {
     margin-bottom: 16px;
-  }
+  } */
   label {
     display: block;
     font-size: 18px;
@@ -56,8 +56,8 @@
   textarea {
     resize: none;
   }
-    button {
+    /* button {
         width: 100%;
       
-    }
+    } */
     
