--- a/assets/css/Main/footer.css
+++ b/assets/css/Main/footer.css
@@ -19,18 +19,25 @@ footer {
 }
 
 
-footer li,
+
 footer p,
 footer a {
     color: rgba(255,255,255,0.7);
     text-decoration: none;
+}
+footer li{
+    color: rgba(255,255,255,0.7);
+    text-decoration: none;
+    padding-bottom: 12px;
 }
 
 footer ul {
     list-style: none;
     padding: 0;
 }
-
+footer p{
+    margin: none;
+}
 footer .line {
     width: 40px;
     height: 4px;
